--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAZE GAME</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="winner hidden">
+        <h1>You WIN !!</h1>
+        <button class='reload'>Play Again</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
